--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
 * {
   box-sizing: border-box;
 }
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+a {
+  color: blue;
+  text-decoration: none;
+  font-size: 16px;
+  margin-right: 5px;
+  border-radius: 10px;
+
+  display: block;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+ul {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+
+  list-style-type: none;
+}
+a:hover {
+  background-color: blue;
+  color: white;
+}
+.container {
+  max-width: 987px;
+  margin: 0 auto;
+}
+.navbar {
+  padding: 15px 0;
+}
